media/css/scss/reminder.scss
.reminder_content{
    padding-top: 1em;
    padding-bottom: 1em;
}

.reminder_content_section{
    border-bottom: 1px solid;
}
#review_section{
 h4{
    border-bottom:1px solid #CCCCCC;
 }

 .ui-accordion-content{
    background:none;
    border:0;
    float:left;
 }
 .header{
    border:0;
    width:100% !important;
    float:left;
    padding:10px 0 10px 0px;
    font-weight:normal;
    background:none;
    h5{
        float:left;
        background:url(/media/images/accordion_arrows.png) no-repeat left -34px;
        padding-left:15px;
        margin-left:15px;
        font-size:14px;
        font-weight:normal;
    }
 }
 .ui-accordion{
    width:100% !important;
    border-bottom:1px solid #CCCCCC;
    float:left;
 }
 .ui-accordion .ui-accordion-content {
    padding:20px 10px 0 10px;
    width:100%;
    ul{
        width:100%;
    }
    ol{
        margin:10px 0 10px 40px;
    }
 }
 .ui-state-active{
    background-color:#525252 !important;
    border:0;
    background: -webkit-gradient(linear, left top, left bottom, from(#525252), to(#3d3d3d)) !important;  //for webkit browsers
    background: -moz-linear-gradient(top,  #525252,  #262626) !important;  //for firefox 3.6+

    h5{
         color:#FFFFFF;
         background:url(/media/images/accordion_arrows.png) no-repeat left 5px;
         padding-left:15px;
         margin-left:15px;
    }

    .success_error{
        color:#FFFFFF;
    }
 }
 a{
        color:#0070ac;
        font-size:12px;
    }
}
.submit-buttons{
    clear: left;
}

